# Bluetooth-Central

./: README.md  accel_log.csv  bluetooth.py  bluetoothReceive.py  device_profiles.py  gui.py  kinematics_calc.py  main.py  old.py  one.py  requirements.txt  two.py  visualization.py  vs.py
bluetooth/: Cargo.toml  ble_imu_manager.py  pyproject.toml
bluetooth/python/bluetooth/: __init__.py  kinematics_calc.py  main.py  visualization.py
bluetooth/python/tests/: test_all.py
bluetooth/src/: lib.rs
bluetooth_connect/: Cargo.toml  pyproject.toml
bluetooth_connect/python/: main.py
bluetooth_connect/python/bluetooth_connect/: __init__.py  main.py
bluetooth_connect/python/bluetooth_connect/visualization/: visuals.py
bluetooth_connect/python/tests/: test_all.py
bluetooth_connect/python/visualization/: visuals.py
bluetooth_connect/src/: lib.rs
gui/: main_window.py
plotting/: visualization.py
rust-bluetooth/: Cargo.toml
rust-bluetooth/src/: lib.rs
