[package]
name = "bluetooth"
version = "0.1.0"
edition = "2021"

[package.metadata.maturin]
name = "bluetooth"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bluetooth"
crate-type = ["cdylib"]

[dependencies]
bluest = "0.6.8"
futures-util = "0.3.31"
pyo3 = { version = "0.25.1", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.25", features = ["async-std-runtime", "attributes"] }
async-std = "1.13"
tokio = { version = "1.45.1", features = ["full"] }
